tests/snapshots/parser_tests__insta@assign.coff.snap
---
source: tests/parser_tests.rs
expression: "ast.items.iter().map(|i|\n                         print.visit_item(i)).reduce(|a, b|\n                                                         format!(\"{}\\n{}\", a,\n                                                                 b)).unwrap()"

---
[0..3] fun [4..5] a [5..6] ()  [7..36] {
	([14..15] a [16..17] = [18..21] #123)
	[27..34] Err: [27..28] Expression not assignable.
}
