tests/snapshots/parser_tests__insta@attr_tests.coff.snap
---
source: tests/parser_tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None)"

---
#[attr1(), attr2('(' Identifier '{' '}' Int ')')]fun test ()  {
	
}
#[Err: Expected token ']'.]fun test ()  {
	
}
