tests/snapshots/parser_tests__insta@expr_parsing.coff.snap
---
source: tests/parser_tests.rs
expression: "ast.items.iter().map(|i|\n                         print.visit_item(i)).reduce(|a, b|\n                                                         format!(\"{}\\n{}\", a,\n                                                                 b)).unwrap()"

---
fun a ()  {
	(((#1 + #2) - (#3 ** #4)) == (#5 - ((#6 / #7) % #8)))
	((#1 * #2) * #3)
	(#1 ** (#2 ** #3))
}
