tests/snapshots/parser_tests__insta@function_with_blocks.coff.snap
---
source: tests/parser_tests.rs
expression: "ast.items.iter().map(|i|\n                         print.visit_item(i)).reduce(|a, b|\n                                                         format!(\"{}\\n{}\", a,\n                                                                 b)).unwrap()"

---
 fun asd ()  {	
	{		
		{			
			(#1)
			}
		{			
			Err: Expected prefix token.
			}
		{			
			(#3)
			}
		}
	}
