tests/snapshots/parser_tests__insta@let.coff.snap
---
source: tests/parser_tests.rs
expression: "ast.items.iter().map(|i|\n                         print.visit_item(i)).reduce(|a, b|\n                                                         format!(\"{}\\n{}\", a,\n                                                                 b)).unwrap()"

---
fun a ()  {
	(let asd = #123)
	(let mut fgh = (#345 + $asd))
}
