tests/snapshots/parser_tests__insta@let_and_ident.coff.snap
---
source: tests/parser_tests.rs
expression: "ast.items.iter().map(|i|\n                         print.visit_item(i)).reduce(|a, b|\n                                                         format!(\"{}\\n{}\", a,\n                                                                 b)).unwrap()"

---
fun a ()  {
	(let asd = #123)
	(let mut fgh = (#345 + $asd))
	{
		Err: Expected token Identifier.
	}
	{
		Err: Expected token '='.
	}
	{
		(let mut asd = Err: Expected prefix token.)
	}
}
