tests/snapshots/parser_tests__insta@multiple_functions_one_error.coff.snap
---
source: tests/parser_tests.rs
expression: "ast.items.iter().map(|i|\n                         print.visit_item(i)).reduce(|a, b|\n                                                         format!(\"{}\\n{}\", a,\n                                                                 b)).unwrap()"

---
fun d ()  {
	(#2)
}
Err: Expected token Identifier.
fun asd ()  {
	(#3)
}
