tests/snapshots/parser_tests__insta@parameter_and_return_test.coff.snap
---
source: tests/parser_tests.rs
expression: "ast.items.iter().map(|i|\n                         print.visit_item(i)).reduce(|a, b|\n                                                         format!(\"{}\\n{}\", a,\n                                                                 b)).unwrap()"

---
fun asd (parm1 : Tt1, param2 : Tt2, ) -> i32 {
}
