tests/snapshots/parser_tests__insta@simple.coff.snap
---
source: tests/parser_tests.rs
expression: "ast.items.iter().map(|i|\n                         print.visit_item(i)).reduce(|a, b|\n                                                         format!(\"{}\\n{}\", a,\n                                                                 b)).unwrap()"

---
 [0..3] fun [4..7] asd [7..31] ([8..13] parm1 [13..14] : [15..18] Tt1, [20..26] param2 [26..27] : [28..31] Tt2, ) [33..35] -> [36..39] i32 [40..97] {	
	[47..67] {		
		([59..60] ([58..59] #2) + ([60..61] #2))
		}
	[74..94] {		
		[85..88] Err: [85..86] Expected prefix token.
		}
	}
