tests/snapshots/parser_tests__insta@test0.coff.snap
---
source: tests/parser_tests.rs
expression: "ast.items.iter().map(|i|\n                         print.visit_item(i)).reduce(|a, b|\n                                                         format!(\"{}\\n{}\", a,\n                                                                 b)).unwrap()"

---
 fun asd ()  {	
	((#2) + (#3))
	(#2)
	}
